<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay_addredit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
      <ImageView
            android:id="@+id/img_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="left"
            android:layout_marginTop="8dp"
            android:src="@drawable/close_button" />
      <TextView
          android:id="@+id/txt_address_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:text="@string/usercenter_addressedit"
          android:textAppearance="?android:attr/textAppearanceMedium" />

      <EditText
          android:id="@+id/txt_address_contactname"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/address_edit_contactname" >

          <requestFocus />
      </EditText>
	 <EditText
          android:id="@+id/txt_address_contactphone"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/address_edit_contactphone"
          android:inputType="phone" />
      <EditText
          android:id="@+id/txt_address_zipcode"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" 
          android:hint="@string/address_edit_zipcode"/>

      <TextView
          android:id="@+id/txt_address_mainaddr"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/address_edit_mainaddr" />

      <EditText
          android:id="@+id/txt_address_subaddr"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/address_edit_subaddr" />

      
      <Button
          android:id="@+id/btn_address_confirm"
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:text="@string/confirm" />

</LinearLayout>
