<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay_addredit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consignee" />

            <com.yizi.iwuse.common.widget.CustomEditText
                android:id="@+id/et_consignee"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableRight="@drawable/btn_clear"
                android:textCursorDrawable="@null" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_num" />

            <com.yizi.iwuse.common.widget.CustomEditText
                android:id="@+id/et_phone_num"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:inputType="number"
                android:drawableRight="@drawable/btn_clear"
                android:textCursorDrawable="@null" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_security_code" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/security_code" />

            <com.yizi.iwuse.common.widget.CustomEditText
                android:id="@+id/et_security_code"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number"
                android:drawableRight="@drawable/btn_clear"
                android:textCursorDrawable="@null" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/receive_time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_day_get" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_edit_zipcode" />

            <com.yizi.iwuse.common.widget.CustomEditText
                android:id="@+id/et_address_zipcode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number"
                android:drawableRight="@drawable/btn_clear"
                android:textCursorDrawable="@null" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_address_mainaddr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_edit_mainaddr"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_edit_subaddr" />

            <com.yizi.iwuse.common.widget.CustomEditText
                android:id="@+id/et_address_subaddr"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableRight="@drawable/btn_clear"
                android:textCursorDrawable="@null" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>