<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
	<include
	    	android:id="@+id/lay_title"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           layout="@layout/title_bar" >
    </include>

	<RelativeLayout
	    android:id="@+id/lay_ordertitle"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="5dp" >

		<TextView
		    android:id="@+id/txt_orderid_title"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/order_id_title" />

		<TextView
		    android:id="@+id/txt_orderid"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:layout_toRightOf="@+id/txt_orderid_title"
		    android:text="9999" />

		<TextView
		    android:id="@+id/txt_ordertime"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:text="2015-06-09 17:17" />

	</RelativeLayout>
	<RelativeLayout android:id="@+id/img_order_status"
	    	android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:gravity="center">
	</RelativeLayout>
	<!-- 
	<com.yizi.iwuse.order.view.OrderStatusView
		    android:id="@+id/img_order_status"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
	 -->
	<LinearLayout
	    android:id="@+id/lay_orderprice"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:padding="5dp" >

		<TextView
		    android:id="@+id/txt_orderamount_title"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/order_amount" />

		<TextView
		    android:id="@+id/txt_orderamount"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="8888" />

	</LinearLayout>

	<ListView
	    android:id="@+id/list_productdetail"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1" >
	</ListView>
	
	 <LinearLayout 
	    android:id="@+id/lay_order_operate"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="right"
	    >

		<Button
		    android:id="@+id/btn_orderpay"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="bottom"
		    android:textSize="12dp"
		    android:text="@string/order_pay" />
		<Button
		    android:id="@+id/btn_ordercancel"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="bottom"
		    android:textSize="12dp"
		    android:text="@string/order_cancel" />
		<Button
		    android:id="@+id/btn_orderlogistics"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="bottom"
		    android:textSize="12dp"
		    android:text="@string/order_logistics" />
		<Button
		    android:id="@+id/btn_orderrefund"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="bottom"
		    android:textSize="12dp"
		    android:text="@string/order_refund" />
		<Button
		    android:id="@+id/btn_order_confirmlogistics"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="bottom"
		    android:textSize="12dp"
		    android:text="@string/order_confirmlogistics" />
	  </LinearLayout>
</LinearLayout>
