<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           layout="@layout/title_bar" >
    </include>
	<LinearLayout 
	 	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center_horizontal"
    	android:layout_gravity="center"
    	android:orientation="horizontal"
	    >
	    <TextView 
	        android:id="@+id/txt_paystatus_all"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/all"/>
	    <TextView 
	         android:id="@+id/txt_paystatus_unpay"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/paystatus_unpay"/>
	    <TextView 
	         android:id="@+id/txt_paystatus_payed"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/paystatus_payed"/>
	    <TextView 
	         android:id="@+id/txt_paystatus_confirm"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:text="@string/paystatus_confirm"/>
	    
	</LinearLayout>
    <ListView
        android:id="@+id/list_orderlist"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         >
    </ListView>

</LinearLayout>