<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:id="@+id/ll_no_empty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/tv_all_select"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/all_select"
        	android:layout_marginLeft="10dp"
        	android:layout_marginRight="10dp"
        	android:textSize="18sp" />
        <TextView
            android:id="@+id/tv_no_select"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/no_select"
        	android:textSize="18sp" />
    </LinearLayout>
    
    <ListView
        android:id="@+id/listView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </ListView>

    <LinearLayout
        android:id="@+id/ll_ticket_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >
        <TextView
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/use_ticket_please" />
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/login"
        	android:textSize="18sp"
        	android:textColor="@color/main_color" />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_sum_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="19sp" />
    
    <Button
        android:id="@+id/btn_submitorder"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:text="@string/submitorder" />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fl_empty"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0" >
    </FrameLayout>

</LinearLayout>